--- a/pages/contactPage/index.html
+++ b/pages/contactPage/index.html
@@ -28,9 +28,9 @@
             <img src="./assets/img/carRentalLogo.png" alt="" class="logo-img" />
           </div>             
         <nav class="navigation">
-          <a href="/index.html" class="navigation-content">Home</a>
+          <a href="./index.html" class="navigation-content">Home</a>
           <a href="../carsPage/index.html" class="navigation-content">Book Cars</a>
-          <a href="./pages/ContactPage/index.html" class="navigation-content-active">Contact Us</a>
+          <a href="../contactPage/index.html" class="navigation-content-active">Contact Us</a>
         </nav>
       </header>
 
