--- a/pages/carsPage/index.html
+++ b/pages/carsPage/index.html
@@ -27,7 +27,7 @@
             <img src="./assets/img/carRentalLogo.png" alt="" class="logo-img" />
         </div>
         <nav class="navigation">
-            <a href="./index.html" class="navigation-content">Home</a>
+            <a href="../../index.html" class="navigation-content">Home</a>
             <a href="../carsPage/index.html" class="navigation-content-active">Book Cars</a>
             <a href="../contactPage/index.html" class="navigation-content">Contact Us</a>
         </nav>
