fix(Paymentpage): fix linking of index.html

--- a/pages/paymentPage/index.html
+++ b/pages/paymentPage/index.html
@@ -28,7 +28,7 @@
               <img src="./assets/img/carRentalLogo.png" alt="" class="logo-img" />
             </div>          
             <nav class="navigation">
-              <a href="./index.html" class="navigation-content">Home</a>
+              <a href="../../index.html" class="navigation-content">Home</a>
               <a href="../carsPage/index.html" class="navigation-content">Book Cars</a>
               <a href="../contactPage/index.html" class="navigation-content">Contact Us</a>
             </nav>
