fix(Homepage): Updated image link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="/assets/img/carRentalImg.png" alt="Car Rental">
+            <img src="./assets/img/carRentalImg.png" alt="Car Rental">
         </div>
     </section>
 
