refactor(Carspage): Updated HTML, CSS, and JS

--- a/pages/carsPage/index.html
+++ b/pages/carsPage/index.html
@@ -121,98 +121,90 @@
                 <button id="filterBtn">Apply</button>
             </aside>
 
-           <!-- Car List Section -->
-<section class="car-list">
-    <!-- 2-Person Cars (Sports Cars) -->
-    <div class="car-card" data-brand="Chevrolet" data-seats="2" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/chevroletCorvette.png" alt="Chevrolet Corvette">
-        <h2>Chevrolet Corvette</h2>
-        <p>⚙️ Automatic 👥 2 Persons</p>
-        <p>₱ 600/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-    <div class="car-card" data-brand="Porsche" data-seats="2" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/porsche911.png" alt="Porsche 911">
-        <h2>Porsche 911</h2>
-        <p>⚙️ Automatic 👥 2 Persons</p>
-        <p>₱ 800/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-
-    <!-- 4-Person Cars (Sedans & Coupes) -->
-    <div class="car-card" data-brand="BMW" data-seats="4" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/BMWM4.png" alt="BMW M4">
-        <h2>BMW M4</h2>
-        <p>⚙️ Automatic 👥 4 Persons</p>
-        <p>₱ 500/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-    <div class="car-card" data-brand="Audi" data-seats="4" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/audiCoupe.png" alt="Audi A5 Coupe">
-        <h2>Audi A5 Coupe</h2>
-        <p>⚙️ Automatic 👥 4 Persons</p>
-        <p>₱ 550/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-
-    <!-- 5-Person Cars (Compact SUVs & Sedans) -->
-    <div class="car-card" data-brand="Toyota" data-seats="5" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/toyotaCorolla.png" alt="Toyota Corolla">
-        <h2>Toyota Corolla</h2>
-        <p>⚙️ Automatic 👥 5 Persons</p>
-        <p>₱ 320/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-    <div class="car-card" data-brand="Honda" data-seats="5" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/hondaCivic.png" alt="Honda Civic">
-        <h2>Honda Civic</h2>
-        <p>⚙️ Automatic 👥 5 Persons</p>
-        <p>₱ 350/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-
-    <!-- 7-Person Cars (Midsize SUVs & MPVs) -->
-    <div class="car-card" data-brand="Toyota" data-seats="7" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/toyotaFortuner.png" alt="Toyota Fortuner">
-        <h2>Toyota Fortuner</h2>
-        <p>⚙️ Automatic 👥 7 Persons</p>
-        <p>₱ 450/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-    <div class="car-card" data-brand="Ford" data-seats="7" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/fordExplorer.png" alt="Ford Explorer">
-        <h2>Ford Explorer</h2>
-        <p>⚙️ Automatic 👥 7 Persons</p>
-        <p>₱ 480/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-
-    <!-- 8-Person Cars (Large SUVs & Vans) -->
-    <div class="car-card" data-brand="Chevrolet" data-seats="8" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/chevroletSuburban.png" alt="Chevrolet Suburban">
-        <h2>Chevrolet Suburban</h2>
-        <p>⚙️ Automatic 👥 8 Persons</p>
-        <p>₱ 500/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-    <div class="car-card" data-brand="Toyota" data-seats="8" data-transmission="Automatic" data-status="available">
-        <img src="./assets/img/toyotaSienna.png" alt="Toyota Sienna">
-        <h2>Toyota Sienna</h2>
-        <p>⚙️ Automatic 👥 8 Persons</p>
-        <p>₱ 550/hr</p>
-        <p class="rental-status">Status: Available</p>
-        <button class="select-car-btn">Select</button>
-    </div>
-</section>
+            <!-- Car List Section -->
+            <section class="car-list">
+                <div class="car-card" data-brand="Chevrolet" data-seats="2" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/chevroletCorvette.png" alt="Chevrolet Corvette">
+                    <h2>Chevrolet Corvette</h2>
+                    <p>⚙️ Automatic 👥 2 Persons</p>
+                    <p>₱ 600/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Porsche" data-seats="2" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/porsche911.png" alt="Porsche 911">
+                    <h2>Porsche 911</h2>
+                    <p>⚙️ Automatic 👥 2 Persons</p>
+                    <p>₱ 800/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="BMW" data-seats="4" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/BMWM4.png" alt="BMW M4">
+                    <h2>BMW M4</h2>
+                    <p>⚙️ Automatic 👥 4 Persons</p>
+                    <p>₱ 500/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Audi" data-seats="4" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/audiCoupe.png" alt="Audi A5 Coupe">
+                    <h2>Audi A5 Coupe</h2>
+                    <p>⚙️ Automatic 👥 4 Persons</p>
+                    <p>₱ 550/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Toyota" data-seats="5" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/toyotaCorolla.png" alt="Toyota Corolla">
+                    <h2>Toyota Corolla</h2>
+                    <p>⚙️ Automatic 👥 5 Persons</p>
+                    <p>₱ 320/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Honda" data-seats="5" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/hondaCivic.png" alt="Honda Civic">
+                    <h2>Honda Civic</h2>
+                    <p>⚙️ Automatic 👥 5 Persons</p>
+                    <p>₱ 350/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Toyota" data-seats="7" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/toyotaFortuner.png" alt="Toyota Fortuner">
+                    <h2>Toyota Fortuner</h2>
+                    <p>⚙️ Automatic 👥 7 Persons</p>
+                    <p>₱ 450/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Ford" data-seats="7" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/fordExplorer.png" alt="Ford Explorer">
+                    <h2>Ford Explorer</h2>
+                    <p>⚙️ Automatic 👥 7 Persons</p>
+                    <p>₱ 480/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Chevrolet" data-seats="8" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/chevroletSuburban.png" alt="Chevrolet Suburban">
+                    <h2>Chevrolet Suburban</h2>
+                    <p>⚙️ Automatic 👥 8 Persons</p>
+                    <p>₱ 500/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+                <div class="car-card" data-brand="Toyota" data-seats="8" data-transmission="Automatic" data-status="available">
+                    <img src="./assets/img/toyotaSienna.png" alt="Toyota Sienna">
+                    <h2>Toyota Sienna</h2>
+                    <p>⚙️ Automatic 👥 8 Persons</p>
+                    <p>₱ 550/hr</p>
+                    <p class="rental-status">Status: Available</p>
+                    <button class="select-car-btn">Select</button>
+                </div>
+            </section>
+        </div>
 
         <!-- Modal for Car Details -->
         <div class="modal" id="carModal" style="display: none;">
@@ -226,8 +218,7 @@
         </div>
     </main>
 
-    <!-- External JavaScript -->
-    <script src="./assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
     <footer>
         <div class="footer-container">
             <div class="footer-section">
