refactor(Carspage): Updated index.html

--- a/pages/carsPage/index.html
+++ b/pages/carsPage/index.html
@@ -127,7 +127,7 @@
                     <img src="./assets/img/chevroletCorvette.png" alt="Chevrolet Corvette">
                     <h2>Chevrolet Corvette</h2>
                     <p>⚙️ Automatic 👥 2 Persons</p>
-                    <p>₱ 600/hr</p>
+                    <p>₱ 3600/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -135,7 +135,7 @@
                     <img src="./assets/img/porsche911.png" alt="Porsche 911">
                     <h2>Porsche 911</h2>
                     <p>⚙️ Automatic 👥 2 Persons</p>
-                    <p>₱ 800/hr</p>
+                    <p>₱ 5800/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -143,7 +143,7 @@
                     <img src="./assets/img/BMWM4.png" alt="BMW M4">
                     <h2>BMW M4</h2>
                     <p>⚙️ Automatic 👥 4 Persons</p>
-                    <p>₱ 500/hr</p>
+                    <p>₱ 4500/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -151,7 +151,7 @@
                     <img src="./assets/img/audiCoupe.png" alt="Audi A5 Coupe">
                     <h2>Audi A5 Coupe</h2>
                     <p>⚙️ Automatic 👥 4 Persons</p>
-                    <p>₱ 550/hr</p>
+                    <p>₱ 3550/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -159,7 +159,7 @@
                     <img src="./assets/img/toyotaCorolla.png" alt="Toyota Corolla">
                     <h2>Toyota Corolla</h2>
                     <p>⚙️ Automatic 👥 5 Persons</p>
-                    <p>₱ 320/hr</p>
+                    <p>₱ 2320/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -167,7 +167,7 @@
                     <img src="./assets/img/hondaCivic.png" alt="Honda Civic">
                     <h2>Honda Civic</h2>
                     <p>⚙️ Automatic 👥 5 Persons</p>
-                    <p>₱ 350/hr</p>
+                    <p>₱ 2350/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -175,7 +175,7 @@
                     <img src="./assets/img/toyotaFortuner.png" alt="Toyota Fortuner">
                     <h2>Toyota Fortuner</h2>
                     <p>⚙️ Automatic 👥 7 Persons</p>
-                    <p>₱ 450/hr</p>
+                    <p>₱ 2450/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -183,7 +183,7 @@
                     <img src="./assets/img/fordExplorer.png" alt="Ford Explorer">
                     <h2>Ford Explorer</h2>
                     <p>⚙️ Automatic 👥 7 Persons</p>
-                    <p>₱ 480/hr</p>
+                    <p>₱ 2480/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -191,7 +191,7 @@
                     <img src="./assets/img/chevroletSuburban.png" alt="Chevrolet Suburban">
                     <h2>Chevrolet Suburban</h2>
                     <p>⚙️ Automatic 👥 8 Persons</p>
-                    <p>₱ 500/hr</p>
+                    <p>₱ 2500/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
@@ -199,7 +199,7 @@
                     <img src="./assets/img/toyotaSienna.png" alt="Toyota Sienna">
                     <h2>Toyota Sienna</h2>
                     <p>⚙️ Automatic 👥 8 Persons</p>
-                    <p>₱ 550/hr</p>
+                    <p>₱ 2550/day</p>
                     <p class="rental-status">Status: Available</p>
                     <button class="select-car-btn">Select</button>
                 </div>
