refactor(Carspage): Updated HTML and JS for better working functionality

--- a/pages/carsPage/index.html
+++ b/pages/carsPage/index.html
@@ -207,7 +207,7 @@
         </div>
     </main>
 
-    <script src="assets/js/scripts.js"></script>
+   
     <footer>
         <div class="footer-container">
             <div class="footer-section">
@@ -238,6 +238,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> 
+ <script src="../carsPage/assets/js/scripts.js"></script>
 </body>
 </html>
